k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warlords
  labels:
    app: warlords
