k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warlords
  namespace: warlords
  labels:
    app: warlords
spec:
  selector:
    app: warlords
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
      appProtocol: http
